--- a/wix/installer.wxs
+++ b/wix/installer.wxs
@@ -1,56 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Wix xmlns="http://wixtoolset.org/schemas/v4/wxs">
 
-  <!-- The MSI package itself -->
   <Package
       Name="gcode_gen.msi"
       Manufacturer="CropCrusaders"
       Version="$(var.Version)"
       UpgradeCode="BED5A804-5004-4E97-9DC1-C3C65803EA45">
 
-    <!-- Install path  C:\Program Files\CropCrusaders\gcode_gen -->
+    <MediaTemplate EmbedCab="yes"/>
+
     <StandardDirectory Id="ProgramFilesFolder">
       <Directory Id="INSTALLFOLDER" Name="CropCrusaders">
-        <Directory Id="PRODUCTDIR"  Name="gcode_gen" />
+        <Directory Id="PRODUCTDIR"  Name="gcode_gen"/>
       </Directory>
     </StandardDirectory>
 
-    <!-- Main executable -->
     <ComponentGroup Id="MainFiles" Directory="PRODUCTDIR">
       <Component Id="CmpExe" Guid="*">
-        <File
-          Id="FilExe"
-          Source="$(var.BuildDir)\gcode_gen.exe"
-          KeyPath="yes" />
+        <File Id="FilExe"
+              Source="$(var.BuildDir)\gcode_gen.exe"
+              KeyPath="yes"/>
       </Component>
     </ComponentGroup>
 
-    <!-- Start-menu shortcut -->
     <StandardDirectory Id="ProgramMenuFolder">
-      <Directory Id="PROGDIR" Name="CropCrusaders" />
+      <Directory Id="PROGDIR" Name="CropCrusaders"/>
     </StandardDirectory>
 
     <ComponentGroup Id="MenuShortcuts" Directory="PROGDIR">
       <Component Id="CmpShortcut" Guid="*">
-        <Shortcut
-          Id="ScExe"
-          Name="gcode_gen"
-          Target="[PRODUCTDIR]gcode_gen.exe"
-          WorkingDirectory="PRODUCTDIR" />
-        <RemoveFolder Id="RmProgDir" On="uninstall" />
-        <RegistryValue
-          Root="HKCU"
-          Key="Software\CropCrusaders\gcode_gen"
-          Type="string"
-          Value="installed"
-          KeyPath="yes" />
+        <Shortcut Id="ScExe"
+                  Name="gcode_gen"
+                  Target="[PRODUCTDIR]gcode_gen.exe"
+                  WorkingDirectory="PRODUCTDIR"/>
+        <RemoveFolder Id="RmProgDir" On="uninstall"/>
+        <RegistryValue Root="HKCU"
+                       Key="Software\CropCrusaders\gcode_gen"
+                       Type="string"
+                       Value="installed"
+                       KeyPath="yes"/>
       </Component>
     </ComponentGroup>
 
-    <!-- Feature tree -->
     <Feature Id="Main" Title="gcode_gen" Level="1">
-      <ComponentGroupRef Id="MainFiles" />
-      <ComponentGroupRef Id="MenuShortcuts" />
+      <ComponentGroupRef Id="MainFiles"/>
+      <ComponentGroupRef Id="MenuShortcuts"/>
     </Feature>
 
   </Package>
