--- a/wix/installer.wxs
+++ b/wix/installer.wxs
@@ -11,41 +11,35 @@
 
     <StandardDirectory Id="ProgramFilesFolder">
       <Directory Id="INSTALLFOLDER" Name="CropCrusaders">
-        <Directory Id="PRODUCTDIR"  Name="gcode_gen"/>
+        <Directory Id="PRODUCTDIR" Name="gcode_gen"/>
       </Directory>
     </StandardDirectory>
 
-    <ComponentGroup Id="MainFiles" Directory="PRODUCTDIR">
-      <Component Id="CmpExe" Guid="*">
-        <File Id="FilExe"
-              Source="$(var.BuildDir)\gcode_gen.exe"
-              KeyPath="yes"/>
-      </Component>
-    </ComponentGroup>
+    <ComponentGroupRef Id="BuildComponents"/>
 
     <StandardDirectory Id="ProgramMenuFolder">
       <Directory Id="PROGDIR" Name="CropCrusaders"/>
     </StandardDirectory>
 
-    <ComponentGroup Id="MenuShortcuts" Directory="PROGDIR">
-      <Component Id="CmpShortcut" Guid="*">
-        <Shortcut Id="ScExe"
-                  Name="gcode_gen"
-                  Target="[PRODUCTDIR]gcode_gen.exe"
-                  WorkingDirectory="PRODUCTDIR"/>
-        <RemoveFolder Id="RmProgDir" On="uninstall"/>
-        <RegistryValue Root="HKCU"
-                       Key="Software\CropCrusaders\gcode_gen"
-                       Type="string"
-                       Value="installed"
-                       KeyPath="yes"/>
-      </Component>
-    </ComponentGroup>
+    <Component Id="CmpShortcut" Guid="*">
+      <Shortcut Id="ScExe"
+                Name="gcode_gen"
+                Target="[PRODUCTDIR]gcode_gen.exe"
+                WorkingDirectory="PRODUCTDIR"/>
+      <RemoveFolder Id="RmProgDir" On="uninstall"/>
+      <RegistryValue Root="HKCU"
+                     Key="Software\CropCrusaders\gcode_gen"
+                     Type="string"
+                     Value="installed"
+                     KeyPath="yes"/>
+      <DirectoryRef Id="PROGDIR"/>
+    </Component>
 
     <Feature Id="Main" Title="gcode_gen" Level="1">
-      <ComponentGroupRef Id="MainFiles"/>
-      <ComponentGroupRef Id="MenuShortcuts"/>
+      <ComponentGroupRef Id="BuildComponents"/>
+      <ComponentRef Id="CmpShortcut"/>
     </Feature>
 
   </Package>
 </Wix>
+
